--- a/blocks/first-column/first-column.css
+++ b/blocks/first-column/first-column.css
@@ -5,3 +5,9 @@
   display: flex;
   flex-direction: column;
 }
+
+@media screen and (max-width: 767px) {
+  .first-column {
+    padding: 0 15px;
+  }
+}
