--- a/blocks/second-column/second-column.css
+++ b/blocks/second-column/second-column.css
@@ -1,7 +1,15 @@
 .second-column {
   position: relative;
   max-width: 720px;
+  min-height: 540px;
   background-image: url(../../images/The\ Gear\ cage.jpg);
   background-size: cover;
   background-position: center;
+}
+
+@media screen and (max-width: 767px) {
+  .second-column {
+    max-width: 100%;
+    margin-bottom: 16px;
+  }
 }
